monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.$APP_DOMAIN`)
      kind: Rule
      services:
        - name: grafana
          port: 80
