monitoring/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.$APP_DOMAIN`)
      kind: Rule
      services:
        - name: prometheus-prometheus
          port: 9090
